force-app/main/default/objects/Sale_Line_Item__c/Sale_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Sale Line Item</label>
    <nameField>
        <displayFormat>SLI-{0}</displayFormat>
        <label>SLI #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sale Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>