force-app/main/default/objects/Sale_Line_Item__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Item__c</referenceTo>
    <relationshipName>Sales</relationshipName>
    <type>Lookup</type>
</CustomField>