force-app/main/default/objects/Sale_Line_Item__c/fields/Sale__c.field-meta.xml
<CustomField>
    <fullName>Sale__c</fullName>
    <label>Sale</label>
    <referenceTo>Product_Sales_Budget__c</referenceTo>
    <relationshipLabel>Sale Line Items</relationshipLabel>
    <relationshipName>Sale_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>