force-app/main/default/objects/Sale_Line_Item__c/fields/Total_Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Sales_Price__c</fullName>
    <formula>Sale_Price__c * Volume__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Sales Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>