force-app/main/default/objects/Sale_Line_Item__c/fields/Volume__c.field-meta.xml
<CustomField>
    <fullName>Volume__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>