force-app/main/default/objects/Sale_Line_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Volume__c</columns>
    <columns>Sale__c</columns>
    <columns>Sale_Price__c</columns>
    <columns>Total_Sales_Price__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>